<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <FrameLayout
        style="@style/Theme.Material3.DynamicColors.DayNight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollvv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/SecureImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="TextView" />

            </LinearLayout>

            <WebView
                android:id="@+id/webview"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="95">

            </WebView>

            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:id="@+id/scroll"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="4"
                        android:background="#00000000"
                        android:fadeScrollbars="true"
                        android:fitsSystemWindows="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom|end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/changeUrlButton"
                                style="@style/Widget.Material3.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1"
                                android:text="Changer l'URL"
                                app:icon="@android:drawable/ic_menu_preferences" />

                            <Button
                                android:id="@+id/button"
                                style="@style/Widget.Material3.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/forward_button"
                                android:text="Page précédente"
                                app:icon="@drawable/baseline_arrow_circle_right_24"
                                app:iconGravity="textEnd"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:id="@+id/button8"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/refresh_button"
                                android:text="Recharger la page"
                                app:icon="@drawable/baseline_refresh_24"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:text="Favoris enregistrés"
                                app:icon="@drawable/baseline_bookmarks_24"
                                app:iconGravity="textEnd"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:id="@+id/button5"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/favorite_button_add"
                                android:text="Ajouter un favoris"
                                app:icon="@drawable/baseline_bookmark_add_24"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/delete_fav_button"
                                android:text="Supprimer un favoris"
                                app:icon="@drawable/baseline_bookmark_remove_24"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:id="@+id/soundButton"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/changer_la_couleur"
                                android:text="Changer le thème (INSTABLE)"
                                app:icon="@drawable/baseline_palette_24"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/SizeMenu"
                                android:contentDescription="@string/delete_data_button"
                                android:onClick='onDeleteDataClick'
                                android:text="Supprimer toutes les données"
                                app:icon="@drawable/baseline_delete_forever_24"
                                app:iconPadding="0dp"
                                app:iconSize="@dimen/SizeMenubtn" />

                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@android:color/holo_red_dark" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
